[package]
name = "Nats_ka_rust"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pub_sub"
path = "src/pub_sub.rs"

[[bin]]
name = "relay"
path = "src/relay.rs"

[[bin]]
name = "request"
path = "src/request.rs"

[dependencies]
async-nats = "0.44.2"
tokio = { version = "1.39.0", features = ["full"] }
futures = "0.3.28"
bytes = "1.4.0"